syntax = "proto3";

option go_package = "api/pb/chat;chat";

service ChatService {
  rpc SendMessage (ChatMessage) returns (Empty);
  rpc ChatStream (ChatStreamRequest) returns (stream ChatMessage);
}

message ChatMessage {
  uint64 id = 1; // Это ID пользователя (ПОМЕНЯТЬ!) Поменять на число
  string user = 2;
  string text = 3;
  string color = 4;
  int64 timestamp = 5; // время отправки (Unix time, в миллисекундах или секундах)
  MessageType type = 6; // тип сообщения
  uint32 users_count = 7; // Кол-во участников чата
}

enum MessageType {
  MESSAGE_UNKNOWN = 0;
  MESSAGE_USER = 1;     // обычное сообщение пользователя
  MESSAGE_SYSTEM = 2;   // системное сообщение
  MESSAGE_SELF = 3;     // сообщение от самого себя
}

message ChatStreamRequest {
  uint64 id = 1;
}

message Empty {}